--- a/views/centros/formulario.pug
+++ b/views/centros/formulario.pug
@@ -28,25 +28,41 @@ block content
         div(layout="row" layout-xs="column" layout-sm="column" layout-align="center center" layout-margin )
           md-input-container.w-100(style="margin-bottom:20px;" flex)
             label Centro de trabajo
-            md-select(ng-model='$fCtrl.form.idCentro' ng-disabled="!$fCtrl.form.linea || $fCtrl.id")
-              md-option(ng-repeat='opcion in $fCtrl.listaOps', ng-value='opcion.id')
-                | {{opcion.codigo}} - {{opcion.descripcion}}
+            //- md-select(ng-model='$fCtrl.form.idCentro' ng-disabled="!$fCtrl.form.linea || $fCtrl.id")
+            //-   md-option(ng-repeat='opcion in $fCtrl.listaOps', ng-value='opcion.id')
+            //-     | {{opcion.codigo}} - {{opcion.descripcion}}
+            md-select(ng-model='$fCtrl.form.idCentro' md-on-close="$fCtrl.busqueda = ''" md-on-open='$fCtrl.focoParaBuscar()' ng-disabled="!$fCtrl.form.linea || $fCtrl.id")
+              md-select-header
+                input.campo-busqueda(ng-model='$fCtrl.busqueda' ng-keydown="$fCtrl.buscar($event)" type='search' placeholder='Buscar OP...')
+              md-option(ng-value='opcion.id' ng-repeat="opcion in $fCtrl.listaOps | filter:$fCtrl.busqueda") {{opcion.codigo}} - {{opcion.descripcion}}
             i(class='error' ng-show="$fCtrl.errores.idCentro" ng-repeat="opcion in  $fCtrl.errores.idCentro")
               | {{ opcion }}          
           md-input-container.w-100(style="margin-bottom:20px;" flex)
             label Auditores
-            md-select(ng-model='$fCtrl.form.auditores' ng-disabled="!$fCtrl.form.linea" multiple)
-              md-option(ng-repeat='opcion in $fCtrl.auditores', ng-value='opcion.id')
-                | {{opcion.nombre}}
+            //- md-select(ng-model='$fCtrl.form.auditores' ng-disabled="!$fCtrl.form.linea" multiple)
+            //-   md-option(ng-repeat='opcion in $fCtrl.auditores', ng-value='opcion.id')
+            //-     | {{opcion.nombre}}
+            md-select(ng-model='$fCtrl.form.auditores' md-on-close="$fCtrl.busquedaAuditor = ''" md-on-open='$fCtrl.focoParaBuscar()' ng-disabled="!$fCtrl.form.linea" multiple)
+              md-select-header
+                input.campo-busqueda(ng-model='$fCtrl.busquedaAuditor' ng-keydown="$fCtrl.buscar($event)" type='search' placeholder='Buscar OP...')
+              md-option(ng-value='opcion.id' ng-repeat="opcion in $fCtrl.auditores | filter:$fCtrl.busquedaAuditor") {{opcion.nombre}}
+            
+            
             i(class='error' ng-show="$fCtrl.errores.auditores" ng-repeat="opcion in  $fCtrl.errores.auditores")
               | {{ opcion }}          
             
         div(layout="row" layout-xs="column" layout-sm="column" layout-align="center center" layout-margin )
           md-input-container.w-100(flex)
             label Usuarios a notificar
-            md-select(ng-model='$fCtrl.form.usuarios' ng-disabled="!$fCtrl.form.linea" multiple)
-              md-option(ng-repeat='opcion in $fCtrl.usuarios', ng-value='opcion.id')
-                | {{opcion.nombre}}
+            //- md-select(ng-model='$fCtrl.form.usuarios' ng-disabled="!$fCtrl.form.linea" multiple)
+            //-   md-option(ng-repeat='opcion in $fCtrl.usuarios', ng-value='opcion.id')
+            //-     | {{opcion.nombre}}
+            md-select(ng-model='$fCtrl.form.usuarios' md-on-close="$fCtrl.busquedaUsuario = ''" md-on-open='$fCtrl.focoParaBuscar()' ng-disabled="!$fCtrl.form.linea" multiple)
+              md-select-header
+                input.campo-busqueda(ng-model='$fCtrl.busquedaUsuario' ng-keydown="$fCtrl.buscar($event)" type='search' placeholder='Buscar OP...')
+              md-option(ng-value='opcion.id' ng-repeat="opcion in $fCtrl.usuarios | filter:$fCtrl.busquedaUsuario") {{opcion.nombre}}
+            
+            
             i(class='error' ng-show="$fCtrl.errores.usuarios" ng-repeat="opcion in  $fCtrl.errores.usuarios")
               | {{ opcion }} 
         br
