--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,50 @@
 extends ./layout/layout
 
 block content
+  script(src="/static/javascripts/librerias/anime.min.js")
+  link(rel='stylesheet', href="/static/stylesheets/login.css")
   br
   div(layout="column" flex layout-margin layout-padding ng-controller="login as $lCtrl")
     span(flex)
-    div(layout="row")
-      span(flex)
-      .md-whiteframe-2dp(flex flex-xs="90" layout-margin layout-padding)
-        div(layout="column" layout-align="center center")
+    div(layout="row" layout-align="center center")
+      span(flex hide-xs)
+      div.md-whiteframe-2dp(layout="column" style="width: 320px; padding: 0;background:#e4f0ff")
+        div(layout-padding)
+          span(flex)
+          img.logo(src="/static/images/logo-busscar.png")
+          span(flex)
+        .container
+          .right
+            svg(viewBox='0 0 320 300')
+              defs
+                lineargradient#linearGradient(inkscape:collect='always', x1='13', y1='193.49992', x2='307', y2='193.49992', gradientUnits='userSpaceOnUse')
+                  stop#stop876(style='stop-color:#7eb7ff;', offset='0')
+                  stop#stop878(style='stop-color:#0047a0;', offset='1')
+              path(d='m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143')
+            .form
+              label(for='email') Usuario de red
+              input#email(type='text' ng-model='$lCtrl.form.usuarioRed' autofocus )
+              label(for='password') Contraseña
+              input#password(type='password' ng-model='$lCtrl.form.contrasena')
+              input#submit(type='submit', value='Ingresar' ng-click="$lCtrl.login()")
+      span(flex hide-xs)
+          
+      //- .md-whiteframe-2dp(flex flex-xs="90" layout-margin layout-padding)
+        .right
+          svg(viewBox='0 0 320 300')
+            defs
+              lineargradient#linearGradient(inkscape:collect='always', x1='13', y1='193.49992', x2='307', y2='193.49992', gradientUnits='userSpaceOnUse')
+                stop#stop876(style='stop-color:#ff00ff;', offset='0')
+                stop#stop878(style='stop-color:#ff0000;', offset='1')
+            path(d='m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143')
+          .form
+            label(for='email') Email
+            input#email(type='email')
+            label(for='password') Password
+            input#password(type='password')
+            input#submit(type='submit', value='Submit')
+
+        //- div(layout="column" layout-align="center center")
           h2 login
           md-input-container.md-block(flex)
             label Usuario de Red 
@@ -16,6 +53,6 @@ block content
             label Contraseña
             input(ng-model='$lCtrl.form.contrasena' type="password")
           md-button.md-raised(ng-click="$lCtrl.login()") login
-      span(flex)
+      //- span(flex hide-xs)
     span(flex)
     
