--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -16,6 +16,7 @@
     "/static/angular-md5/angular-md5.js",
     "/static/javascripts/librerias/validate.js", 
     "/static/javascripts/main.js", 
+    "/static/javascripts/factories/menu.js", 
     "/static/javascripts/factories/toast.js", 
     "/static/javascripts/controllers/header.js", 
     "/static/javascripts/controllers/login.js", 
