--- a/views/usuarios/formulario.pug
+++ b/views/usuarios/formulario.pug
@@ -37,7 +37,7 @@ block content
               i(class='error' ng-show="$fCtrl.errores.usuarioRed" ng-repeat="opcion in  $fCtrl.errores.usuarioRed")
                 | {{ opcion }}
           
-          div(layout="row" layout-xs="column" layout-sm="column" layout-align="center center" layout-margin ng-if="!$fCtrl.id")
+          //- div(layout="row" layout-xs="column" layout-sm="column" layout-align="center center" layout-margin ng-if="!$fCtrl.id")
             md-input-container.md-block(flex)
               label Contraseña
               input(ng-model='$fCtrl.form.contrasena' type="password")
