--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,7 +170,11 @@ md-sidenav {
   text-rendering: optimizeLegibility;
   font-weight: 500;
 }
-
+.side-menu .menu-toggle-list a.md-button:hover {
+  background: #3f51b5;
+  color: #fff;
+  font-weight: bold;
+}
 .side-menu .menu-toggle-list .md-button {
   display: block;
   padding: 0 16px 0 32px;
