--- a/views/notificaciones/formulario.pug
+++ b/views/notificaciones/formulario.pug
@@ -9,6 +9,8 @@ block content
     div(layout="row" layout-align="center center" flex layout-margin layout-padding ng-init="$fCtrl.id = " + id + ';$fCtrl.init();')
       h2 Generar Notificación
     md-divider
+    div(ng-if="$fCtrl.loading" layout='row', layout-sm='column', layout-align='center center')
+      md-progress-linear(flex md-mode='indeterminate')
     div(layout="row" layout-xs="column" layout-align="start start" flex layout-margin layout-padding)
       span(flex hide-sm)
       md-input-container.w-100.md-block(flex)
@@ -59,7 +61,7 @@ block content
     div(layout="row" layout-xs="column" layout-align="space-around center" flex layout-margin layout-padding layout-wrap="")
       .md-whiteframe-2dp.w-100.puesto-de-trabajo( ng-class="{'puesto-activo':$fCtrl.form.idCentro == opcion.idCentro}" 
         flex="30" flex-xs="100" flex-md="45" flex-sm="45" layout="column" layout-align="center center" 
-        ng-click="$fCtrl.form.idCentro = opcion.idCentro;$fCtrl.form.nombreCentro = opcion.preijo + opcion.op" ng-repeat="opcion in $fCtrl.centros" ng-if="$fCtrl.form.linea == opcion.linea")
+        ng-click="$fCtrl.form.idCentro = opcion.idCentro;$fCtrl.form.nombreCentro = opcion.descripcion" ng-repeat="opcion in $fCtrl.centros" ng-if="$fCtrl.form.linea == opcion.linea")
         b {{ opcion.codigo }}
         b {{ opcion.descripcion }}
         br  
