--- a/views/usuarios/formulario.pug
+++ b/views/usuarios/formulario.pug
@@ -9,6 +9,8 @@ block content
     div(layout="row" layout-align="center center" flex ng-init="$fCtrl.id = " + id + ';$fCtrl.init();')
       b.titulo Crear Usuario
     //- md-divider
+    div(ng-if="$fCtrl.loading" layout='row', layout-sm='column', layout-align='center center')
+      md-progress-linear(flex md-mode='indeterminate')
     div(layout="row" layout-xs="column" layout-align="start start" flex )
       .md-whiteframe-2dp(layout="column" layout-align="center center" flex layout-margin layout-padding)
         md-content(style="width:100%" layout-margin layout-padding)
