--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -7,6 +7,8 @@
 - 
   var javascripts = [ 
     "/static/jquery/dist/jquery.js",
+    "/static/jquery-ui-dist/jquery-ui.js",
+    
     "/static/angular/angular.js",
     "/static/moment/moment.js",
     "/static/angular-aria/angular-aria.js",
@@ -15,6 +17,7 @@
     "/static/angular-material/angular-material.js",
     "/static/angular-md5/angular-md5.js",
     "/static/javascripts/librerias/validate.js", 
+    "/static/angular-ui-sortable/src/sortable.js",
     "/static/javascripts/main.js", 
     "/static/javascripts/factories/menu.js", 
     "/static/javascripts/factories/toast.js", 
@@ -26,6 +29,19 @@
     "/static/javascripts/controllers/usuarios/form.js",
     "/static/javascripts/controllers/centros/lista.js",
     "/static/javascripts/controllers/centros/form.js",
+    
+    "/static/javascripts/controllers/chequeo/defectos.js",
+    "/static/javascripts/controllers/chequeo/categorias.js",
+    "/static/javascripts/controllers/chequeo/operaciones.js",
+    "/static/javascripts/controllers/chequeo/centro/form.js",
+    "/static/javascripts/controllers/chequeo/centro/list.js",
+    "/static/javascripts/controllers/chequeo/chasis-carroceria/lista.js",
+    "/static/javascripts/controllers/chequeo/chasis-carroceria/formulario.js",
+    "/static/javascripts/controllers/chequeo/control/form.js",
+    "/static/javascripts/controllers/chequeo/control/list.js",
+    "/static/javascripts/controllers/chequeo/indicadores/indicadorCentro.js",
+    "/static/javascripts/controllers/chequeo/indicadores/indicadorOp.js",
+    "/static/javascripts/controllers/chequeo/fotos.js",
   ]
 doctype html
 html(ng-app='calidad')
