--- a/views/notificaciones/formulario.pug
+++ b/views/notificaciones/formulario.pug
@@ -63,7 +63,7 @@ block content
         flex="30" flex-xs="100" flex-md="45" flex-sm="45" layout="column" layout-align="center center" 
         ng-click="$fCtrl.form.idCentro = opcion.idCentro;$fCtrl.form.nombreCentro = opcion.descripcion" ng-repeat="opcion in $fCtrl.centros" ng-if="$fCtrl.form.linea == opcion.linea")
         b {{ opcion.codigo }}
-        b {{ opcion.descripcion }}
+        b(style="text-align: center;") {{ opcion.descripcion }}
         br  
         md-icon(md-svg-src='/static/content/icons/tools.svg')
         br
